--- a/Giros/App.config
+++ b/Giros/App.config
@@ -7,10 +7,14 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
-	<entityFramework>
-		<defaultConnectionFactory type="MySql.Data.EntityFramework.MySqlConnectionFactory,MySql.Data.EntityFramework" />
-		<providers>
-			<provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework" />
-		</providers>
-	</entityFramework>
-<connectionStrings><add name="BibMod" connectionString="server=localhost;user id=root;password=nokia2700;database=entity" providerName="MySql.Data.MySqlClient" /><add name="GyroDb" connectionString="server=localhost;user id=root;password=nokia2700;persistsecurityinfo=True;database=giros" providerName="MySql.Data.MySqlClient" /></connectionStrings></configuration>
+  <entityFramework>
+    <defaultConnectionFactory type="MySql.Data.EntityFramework.MySqlConnectionFactory,MySql.Data.EntityFramework" />
+    <providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework" />
+    </providers>
+  </entityFramework>
+  <connectionStrings>
+   
+    
+  <add name="GyroDB" connectionString="server=localhost;user id=root;password=nokia2700;persistsecurityinfo=True;database=giros" providerName="MySql.Data.MySqlClient" /></connectionStrings>
+</configuration>
