--- a/Giros/Giros.csproj
+++ b/Giros/Giros.csproj
@@ -316,6 +316,9 @@
   <ItemGroup>
     <Resource Include="Resources\images\user.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\images\staff.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
