--- a/Giros/Giros.csproj
+++ b/Giros/Giros.csproj
@@ -149,11 +149,17 @@
     <Compile Include="Model\OrderModel.cs" />
     <Compile Include="Model\side.cs" />
     <Compile Include="Model\staff.cs" />
+    <Compile Include="Views\AddStaff.xaml.cs">
+      <DependentUpon>AddStaff.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\AdminPanel.xaml.cs">
       <DependentUpon>AdminPanel.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\DrinkPage.xaml.cs">
       <DependentUpon>DrinkPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\EditStaff.xaml.cs">
+      <DependentUpon>EditStaff.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\LocationPage.xaml.cs">
       <DependentUpon>LocationPage.xaml</DependentUpon>
@@ -170,11 +176,19 @@
     <Compile Include="Views\TypePage.xaml.cs">
       <DependentUpon>TypePage.xaml</DependentUpon>
     </Compile>
+    <Page Include="Views\AddStaff.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\AdminPanel.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\DrinkPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\EditStaff.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -253,9 +267,6 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <Resource Include="Resources\Fonts\Oswald-Light.ttf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -324,6 +335,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\images\gyro.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\images\plus.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
